# tmcp-flow

./: .gitignore  COMPLETE_VERIFICATION_REPORT.md  E2E_TEST_REPORT.md  REFACTORING_QUICK_REFERENCE.md  REFACTORING_VERIFICATION.md  TEST_REPORT.md  package-lock.json  package.json  playwright-results.txt  playwright.config.ts  vite.config.js  vitest.config.ts
.github/: copilot-instructions.md
ai-server/: config.py  database.py  evaluator.py  main.py  models.py  parsers.py  pipeline.py  postprocessors.py  prompts.py  pyproject.toml  test_fix.py
docs/: architecture.md  cascade-failure-scene.md  performance.md  prompt-for-storytelling.md
e2e-tests/: refactoring.e2e.spec.ts
playwright-report/: index.html
scripts/: render-cli.ts
server/: server.js
server/config/: config.js
server/data/: flows.db-shm  flows.db-wal  scenarios.json
server/database/: database.js
server/middleware/: setup.js
server/routes/: flowRoutes.js  renderRoutes.js
server/services/: renderService.js  ttsService.js
src/: App.jsx
src/components/: ArgoK3dFlow.jsx  CascadeEdge.jsx  CascadeFailureScene.jsx  CascadeNode.jsx  CustomNode.jsx  DynamicFlowScene.jsx  GroupNode.jsx  UniversalNode.jsx  ViralEdge.jsx
src/components/cascade/: AudioDirector.jsx  BlackoutCTA.jsx  (+1 more)
src/constants/: cascadeConstants.js  flowConstants.js
src/pages/: CascadeFailure.jsx  FlowManager.jsx  Studio.jsx
src/remotion/: RemotionRoot.jsx
src/styles/: App.css  index.css
src/utils/: autoDirect.js  cascadeAutoDirect.js  cascadeSceneUtils.js  elkLayout.js  exportUtils.js  flowUtils.js  sse.js
(+24 files in other folders)
